# rust_template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  WARP.md  cargo-generate.toml  cliff.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml
examples/: basic.rs
hooks/: post.ps1  post.sh  pre.ps1  pre.sh
src/: main.rs  # 可在此文件底部添加简单测试
tests/: hello_world.rs  hello_world.rs  # 新增的集成测试文件
